# ml-for-fun

./: README.md  league_of_legend_win_prediction_first_10mins.ipynb
lol_predict/: .gitignore  Dockerfile  README.md  app.py  environment.yml  league-of-legend-prediction.md  league_of_legend_win_prediction_with_bayesian.ipynb  model.joblib  pyproject.toml  requirements-dev.txt  requirements.txt
lol_predict/scripts/: generate_req_txt.sh
lol_predict/serving/: high_diamond_imputed.csv  model.joblib
