[project]
name = "lol-predict"
version = "0.2.0"
description = "League Of Legends - Winning Prediction from the First 10-minutes Game Data"
readme = "league-of-legend-prediction.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.1.1",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.16.1",
    "pandas>=2.3.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.16.1",
    "pandas>=2.3.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "joblib.*",
    ]
ignore_missing_imports = true
